tests/neg/parser-stability-21.scala
class x0[x1[]]    // error
    extends x1[
// error